# pkg/api/blockchain_converters.go
@@ -269,6 +269,9 @@ func convertMessage(m core.Message, book addressBook) oas.Message {
 		value, _ := json.Marshal(m.DecodedBody.Value)
 		msg.DecodedBody = g.ChangeJsonKeys(value, g.CamelToSnake)
 	}
+	if m.ExtraValue != nil {
+		msg.ExtraValue = convertExtraCurrencies(m.ExtraValue)
+	}
 	return msg
 }
 
